--- a/CSS/Style_Productos.css
+++ b/CSS/Style_Productos.css
@@ -41,7 +41,13 @@
     cursor: pointer;                        /*Cambia el cursor al pasar por arriba*/
     font-weight: 700;                       /*Espesor de la Letra*/
     color: black;                         /*Color Letras*/
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, .8);              /*Agrega sombra*/
+    transition: transform 0.3s ease, box-shadow 0.3s ease;    /* Transiciones */
+}
 
+#btnFinalizar:hover{
+    transform: scale(1.1);                                    /*Incremento tamaño del botón*/
+    box-shadow: 0px 8px 12px rgba(0, 0, 0, 1);              /* Sombra más grande al pasar el mouse */
 }
 
 .clsDivMenu{  
@@ -142,6 +148,13 @@
     border: groove;                         /*Elimina el borde predeterminado*/
     cursor: pointer;                        /*Cambia el cursor al pasar por arriba*/
     font-weight: 700;                       /*Espesor de la Letra*/
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, .8);              /*Agrega sombra*/
+    transition: transform 0.3s ease, box-shadow 0.3s ease;    /* Transiciones */
+}
+
+.clsBtnSeleccion:hover{
+    transform: scale(1.1);                                    /*Incremento tamaño del botón*/
+    box-shadow: 0px 8px 12px rgba(0, 0, 0, 1);              /* Sombra más grande al pasar el mouse */
 }
 
 .clsBtnAgregar{
